moving delete button, layout fix to scrollbar

--- a/src/_App.scss
+++ b/src/_App.scss
@@ -34,6 +34,7 @@ body {
   }
 
   .sidebar {
+    position: relative;
     grid-area: sidebar;
 
     @include for-tablet-landscape-up () {
